--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
         </div>
     </section>
 
+    <!-- Marquee Section -->
+    <section class="marquee-section">
+        <div class="marquee-container">
+            <div class="marquee-content">
+                <span class="marquee-text">DESIGN IS NOT JUST WHAT IT LOOKS LIKE AND FEELS LIKE. DESIGN IS HOW IT WORKS</span>
+                <span class="marquee-text">DESIGN IS NOT JUST WHAT IT LOOKS LIKE AND FEELS LIKE. DESIGN IS HOW IT WORKS</span>
+                <span class="marquee-text">DESIGN IS NOT JUST WHAT IT LOOKS LIKE AND FEELS LIKE. DESIGN IS HOW IT WORKS</span>
+            </div>
+        </div>
+    </section>
+
     <!-- About Me Section -->
     <section class="about-me" id="about">
         <div class="container">
