--- a/index.html
+++ b/index.html
@@ -9,31 +9,36 @@
 <body>
     <!-- Hero Section -->
     <section class="hero">
-        <div class="hero-animated-text">
-            <div class="hero-line">
-                <span class="hero-word" data-word="B">B</span>
-                <span class="hero-word" data-word="r">r</span>
-                <span class="hero-word" data-word="i">i</span>
-                <span class="hero-word" data-word="d">d</span>
-                <span class="hero-word" data-word="g">g</span>
-                <span class="hero-word" data-word="i">i</span>
-                <span class="hero-word" data-word="n">n</span>
-                <span class="hero-word" data-word="g">g</span>
-                <span class="hero-word" data-word=" ">&nbsp;</span>
-                <span class="hero-word" data-word="D">D</span>
-                <span class="hero-word" data-word="a">a</span>
-                <span class="hero-word" data-word="t">t</span>
-                <span class="hero-word" data-word="a">a</span>
+        <div class="hero-content-wrapper">
+            <div class="hero-animated-text">
+                <div class="hero-line">
+                    <span class="hero-word" data-word="B">B</span>
+                    <span class="hero-word" data-word="r">r</span>
+                    <span class="hero-word" data-word="i">i</span>
+                    <span class="hero-word" data-word="d">d</span>
+                    <span class="hero-word" data-word="g">g</span>
+                    <span class="hero-word" data-word="i">i</span>
+                    <span class="hero-word" data-word="n">n</span>
+                    <span class="hero-word" data-word="g">g</span>
+                    <span class="hero-word" data-word=" ">&nbsp;</span>
+                    <span class="hero-word" data-word="D">D</span>
+                    <span class="hero-word" data-word="a">a</span>
+                    <span class="hero-word" data-word="t">t</span>
+                    <span class="hero-word" data-word="a">a</span>
+                </div>
+                <div class="hero-line">
+                    <span class="hero-word" data-word="&">&</span>
+                    <span class="hero-word" data-word=" ">&nbsp;</span>
+                    <span class="hero-word" data-word="D">D</span>
+                    <span class="hero-word" data-word="e">e</span>
+                    <span class="hero-word" data-word="s">s</span>
+                    <span class="hero-word" data-word="i">i</span>
+                    <span class="hero-word" data-word="g">g</span>
+                    <span class="hero-word" data-word="n">n</span>
+                </div>
             </div>
-            <div class="hero-line">
-                <span class="hero-word" data-word="&">&</span>
-                <span class="hero-word" data-word=" ">&nbsp;</span>
-                <span class="hero-word" data-word="D">D</span>
-                <span class="hero-word" data-word="e">e</span>
-                <span class="hero-word" data-word="s">s</span>
-                <span class="hero-word" data-word="i">i</span>
-                <span class="hero-word" data-word="g">g</span>
-                <span class="hero-word" data-word="n">n</span>
+            <div class="hero-logo">
+                <img src="images/RICKRCLAI.jpg" alt="Rick Lai Logo" class="logo-image">
             </div>
         </div>
         <div class="hero-scroll">
